--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "koyu.space Theme",
     "description": "Official koyu.space VS Code theme",
     "version": "0.0.1",
+    "publisher": "koyuspace",
     "engines": {
         "vscode": "^1.55.0"
     },
